@@ -1528,10 +1528,12 @@ struct reservedword init_spin2_words[] = {
     
     { "addbits", SP_ADDBITS },
     { "addpins", SP_ADDPINS },
+    { "bmask", SP_BMASK },
     { "cogspin", SP_COGINIT },
     { "decod", SP_DECODE },
     { "encod", SP_ENCODE },
     { "frac", SP_FRAC },
+    { "ones", SP_ONES },
     { "reg", SP_COGREG },
     { "sca", SP_UNSHIGHMULT },
     { "scas", SP_HIGHMULT },
@@ -1547,6 +1549,7 @@ struct reservedword basic_keywords[] = {
   { "and", BAS_AND },
   { "andalso", BAS_ANDALSO },
   { "any", BAS_ANY },
+  { "append", BAS_APPEND },
   { "as", BAS_AS },
   { "asc", BAS_ASC },
   { "asm", BAS_ASM },
