@@ -46,5 +46,8 @@
 #define K_POWER     0x127
 #define K_FRAC64    0x128
 #define K_UNS_HIGHMULT 0x129
+#define K_ONES_COUNT 0x12a
+#define K_QLOG       0x12b
+#define K_QEXP       0x12c
 
 #endif
