@@ -1,4 +1,5 @@
 Version 4.1.10
+- Added APPEND mode for open
 - Fixed a problem with negative numbers in Spin CASE statements
 
 Version 4.1.9
